--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "BALENTINA PINILLA",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.3",
     "morgan": "^1.10.0"
   }
